<resources>
    <string name="app_name">ClickShop</string>
    <string name="slogan_hint">Your purchase with just one click</string>
    <string name="btn_iniciar_pantalla">Log In</string>
    <string name="btn_registrar_pantalla">Register</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="username_hint">User name</string>
    <string name="emailR_hint">Email</string>
    <string name="passwordR_hint">Password</string>
    <string name="ConfirmPasswordR_hint">Confirm Password</string>
    <string name="finishR_hint">Finish</string>
    <string name="titleR_hint">Register now</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="cart">Buy</string>
    <string name="start_main">Start</string>
    <string name="fav_main">Favorites</string>
    <string name="shop_main">Shopping</string>
    <string name="settings_main">Settings</string>
    <string name="exit_main">Exit</string>
    <string name="search_home">Search</string>
    <string name="buy_car">Pay</string>
    <string name="more_car">Add more products</string>
    <string name="com_Setup">FILL IN YOUT DETAILS</string>
    <string name="nom_Setup">Enter your name</string>
    <string name="dire_setup">Enter your address</string>
    <string name="tel_setup">enter your phone</string>
    <string name="correo_setup">confirm your email</string>
    <string name="completar_setup">To complete</string>
    <string name="more_fav">add more products</string>
    <string name="com_pro">Confirm</string>
    <string name="user_pro">Username</string>
    <string name="set_set">Settings</string>
    <string name="language_set">Language: English</string>
    <string name="mode_set">Mode: Dark</string>
    <string name="city_set">City: Bogota</string>
    <string name="version_set">Version: Version 0.0.1.1</string>

</resources>