<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_first_fragment"
            android:icon="@drawable/ic_bag"
            android:title="@string/start_main" />
        <item
            android:id="@+id/nav_second_fragment"
            android:icon="@drawable/ic_heart"
            android:title="@string/fav_main" />
        <item
            android:id="@+id/nav_third_fragment"
            android:icon="@drawable/ic_shop"
            android:title="@string/shop_main" />

        <item android:title="Cuenta">
            <menu>
                <group android:checkableBehavior="single">
                    <item
                        android:id="@+id/nav_fifth_fragment"
                        android:icon="@drawable/ic_config"
                        android:title="@string/settings_main" />
                    <item
                        android:id="@+id/nav_sixt_fragment"
                        android:icon="@drawable/ic_exit"
                        android:title="@string/exit_main" />

                </group>
            </menu>
        </item>
    </group>
</menu>