<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/palmas"

    tools:context=".SetupActivity">

    <TextView
        android:id="@+id/encabezado"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:layout_centerHorizontal="true"
        android:background="@color/black"
        android:padding="15dp"
        android:text="@string/com_Setup"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/setup_imagen"
        android:layout_width="203dp"
        android:layout_height="179dp"
        android:layout_below="@+id/encabezado"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:src="@drawable/logo"
        app:civ_border_color="@color/black"
        app:civ_border_width="2dp" />

    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/return_home"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_return"
        app:civ_border_width="5dp"
        app:civ_border_color="#FFFFFF"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        />
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="441dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="270dp"
        android:layout_marginRight="10dp">

    <View
        android:layout_width="wrap_content"
        android:layout_height="396dp"
        android:layout_gravity="center"
        android:background="@drawable/frame_background" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/setup_nombre"
                android:layout_width="339dp"
                android:layout_height="54dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/border"
                android:hint="@string/nom_Setup"
                android:inputType="text"
                android:padding="10dp" />


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/setup_direccion"
                android:layout_width="339dp"
                android:layout_height="54dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/border"
                android:hint="@string/dire_setup"
                android:inputType="text"
                android:padding="10dp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/setup_telefono"
                android:layout_width="339dp"
                android:layout_height="54dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/border"
                android:hint="@string/tel_setup"
                android:inputType="phone"
                android:padding="10dp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/setup_correo"
                android:layout_width="339dp"
                android:layout_height="54dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/border"
                android:hint="@string/correo_setup"
                android:inputType="text"
                android:padding="10dp" />

            <EditText
                android:id="@+id/campo_producto"
                android:layout_width="196dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/border"
                android:inputType="none"
                android:textSize="18sp"
                android:lineSpacingExtra="-4dp" />

            <Button
                android:id="@+id/setup_boton"
                android:layout_width="339dp"
                android:layout_height="54dp"
                android:layout_marginTop="5dp"
                android:text="@string/completar_setup"
                android:textSize="18sp"
                android:textColor="#FFFFFF" />
        </LinearLayout>

    </FrameLayout>

</RelativeLayout>