<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/fondonegroq"
    tools:context=".RegistroActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <io.github.florent37.shapeofview.shapes.ArcView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginBottom="26dp"
            android:elevation="4dp"
            app:shape_arc_height="20dp"
            app:shape_arc_position="bottom">


            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/black"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/titleR_hint"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="22dp"
                android:textStyle="bold"
                android:layout_marginTop="50dp"/>
            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/ic_personuser"
                android:layout_gravity="center"
                android:layout_marginTop="49dp"/>

            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/circleimage"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_return"
                app:civ_border_width="5dp"
                app:civ_border_color="#FFFFFF"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="15dp"
                />
        </io.github.florent37.shapeofview.shapes.ArcView>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="441dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp">

            <View
                android:layout_width="wrap_content"
                android:layout_height="396dp"
                android:layout_gravity="center"
                android:background="@drawable/frame_background" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="405dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/TextInputUserNameR"
                    android:layout_width="339dp"
                    android:layout_height="54dp"
                    android:layout_marginBottom="16dp"
                    android:padding="10dp"
                    android:background="@drawable/border"
                    android:hint="@string/username_hint"
                    android:textColor="@android:color/black"
                    android:textColorHint="@android:color/black" />

                <!-- EditText para el correo electronico -->

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/TextViewInputEmailR"
                    android:layout_width="339dp"
                    android:layout_height="54dp"
                    android:layout_marginBottom="16dp"
                    android:padding="10dp"
                    android:background="@drawable/border"
                    android:ems="10"
                    android:hint="@string/emailR_hint"
                    android:inputType="textPersonName"
                    android:textColor="@android:color/black"
                    android:textColorHint="@android:color/black" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/TextViewInputPasswordR"
                    android:layout_width="339dp"
                    android:layout_height="54dp"
                    android:layout_marginBottom="16dp"
                    android:padding="10dp"
                    android:background="@drawable/border"
                    android:ems="10"
                    android:hint="@string/passwordR_hint"
                    android:inputType="textPassword"
                    android:textColor="@android:color/black"
                    android:textColorHint="@android:color/black" />

                <!-- EditText para confirmar la contraseña -->

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/TextViewInputConfirmPassword"
                    android:layout_width="339dp"
                    android:layout_height="54dp"
                    android:layout_marginBottom="16dp"
                    android:padding="10dp"
                    android:background="@drawable/border"
                    android:ems="10"
                    android:hint="@string/ConfirmPasswordR_hint"
                    android:inputType="textPassword"
                    android:textColor="@android:color/black"
                    android:textColorHint="@android:color/black" />

                <Button
                    android:id="@+id/BtnRegister"
                    android:layout_width="339dp"
                    android:layout_height="54dp"
                    android:layout_marginBottom="16dp"
                    android:backgroundTint="@color/black"
                    android:text="@string/finishR_hint"
                    android:textColor="@android:color/white" />

            </LinearLayout>

        </FrameLayout>



    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>