<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/palmas"

    tools:context=".ConfigActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <io.github.florent37.shapeofview.shapes.ArcView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginBottom="26dp"
        android:elevation="4dp"
        app:shape_arc_height="20dp"
        app:shape_arc_position="bottom">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/set_set"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="22dp"
            android:textStyle="bold"
            android:layout_marginTop="50dp"/>

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="49dp"
            android:src="@drawable/ic_settings" />

        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/circleimageConfig"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_return"
            app:civ_border_width="5dp"
            app:civ_border_color="#FFFFFF"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"/>

    </io.github.florent37.shapeofview.shapes.ArcView>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="352dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="10dp">

            <View
                android:layout_width="wrap_content"
                android:layout_height="396dp"
                android:layout_gravity="center"
                android:background="@drawable/frame_background" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="308dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textIdioma"
                    android:layout_width="339dp"
                    android:layout_height="54dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/border"
                    android:padding="10dp"
                    android:text="@string/language_set"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:gravity="center" />


                <TextView
                    android:id="@+id/textMode"
                    android:layout_width="339dp"
                    android:layout_height="54dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/border"
                    android:padding="10dp"
                    android:text="@string/mode_set"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:gravity="center"/>

                <TextView
                    android:id="@+id/textCiudadC"
                    android:layout_width="339dp"
                    android:layout_height="54dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/border"
                    android:padding="10dp"
                    android:text="@string/city_set"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:gravity="center"/>

                <TextView
                    android:id="@+id/textVersion"
                    android:layout_width="339dp"
                    android:layout_height="54dp"
                    android:layout_marginBottom="16dp"
                    android:background="@drawable/border"
                    android:padding="10dp"
                    android:text="@string/version_set"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:gravity="center"/>

            </LinearLayout>
        </FrameLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>